--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="React Google Fonts Widget created with React" />
-  <link rel="apple-touch-icon" href="GFonts.png" />
+  <link rel="apple-touch-icon" href="ABFonts.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>React Google Fonts Widget</title>
 </head>
